fix: fix endpoints to meet reqs
