# docs/swagger.yaml
@@ -248,18 +248,11 @@ paths:
       - application/json
       description: get all equipment with limit and offset facturers from the database
       parameters:
-      - description: limit
+      - description: active and inactive
         in: query
-        minimum: 1
-        name: limit
+        name: all
         required: true
-        type: integer
-      - description: offset
-        in: query
-        minimum: 1
-        name: offset
-        required: true
-        type: integer
+        type: boolean
       produces:
       - application/json
       responses:
@@ -343,13 +336,13 @@ paths:
       - description: manufacturer id
         in: query
         minimum: 1
-        name: manufacturer_id
+        name: manufacturer
         required: true
         type: integer
       - description: device id
         in: query
         minimum: 1
-        name: device_id
+        name: device
         required: true
         type: integer
       produces:
@@ -746,7 +739,7 @@ paths:
         type: integer
       - description: offset
         in: query
-        minimum: 1
+        minimum: 2
         name: offset
         required: true
         type: integer
